<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>kieda</groupId>
  <artifactId>protag</artifactId>
  <version>1.1</version>

  <repositories>
    <repository>
      <id>kieda-github-repo</id>
      <name>Kieda Github Repo</name>
      <url>https://github.com/kieda/maven-repo/raw/main/</url>
    </repository>
  </repositories>

  <properties>
    <maven.compiler.source>20</maven.compiler.source>
    <maven.compiler.target>20</maven.compiler.target>
    <org.openjfx.version>20</org.openjfx.version>
    <junit.jupiter.version>5.9.1</junit.jupiter.version>
    <junit.platform.version>1.9.1</junit.platform.version>
    <protag.lang.directory>src/main/jflex</protag.lang.directory>
    <protag.lang.packagefolder>io/hostilerobot/protag/lang</protag.lang.packagefolder>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-math</artifactId>
      <version>2.2</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.12.0</version>
      <scope>test</scope>
    </dependency>

    <!-- parser combinators -->
    <dependency>
      <groupId>de.jflex</groupId>
      <artifactId>jflex-parent</artifactId>
      <version>1.9.1</version>
      <type>pom</type>
    </dependency>
    <dependency>
      <groupId>de.jflex</groupId>
      <artifactId>jflex</artifactId>
      <version>1.9.1</version>
    </dependency>
<!--    <dependency>-->
<!--      <groupId>com.github.vbmacher</groupId>-->
<!--      <artifactId>java-cup-runtime</artifactId>-->
<!--      <version>11b-20160615-2</version>-->
<!--    </dependency>-->
    <dependency>
      <groupId>javacc</groupId>
      <artifactId>javacc</artifactId>
      <version>4.1</version>
    </dependency>
    <!--<dependency>
      <groupId>de.jflex</groupId>
      <artifactId>cup_runtime</artifactId>
      <version>11b-20160615</version>
    </dependency> -->

    <!-- Sealed Enums -->
    <dependency>
      <groupId>kieda</groupId>
      <artifactId>sealed-enum</artifactId>
      <version>1.0</version>
    </dependency>
    <!-- Trie Map (for plugin state) -->
    <dependency>
      <groupId>com.github.romix</groupId>
      <artifactId>java-concurrent-hash-trie-map</artifactId>
      <version>0.2.23</version>
    </dependency>
    <!-- JUnit -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-suite</artifactId>
      <version>${junit.platform.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <finalName>${project.artifactId}-${project.version}</finalName>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>20</source>
          <target>20</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.1.2</version>
        <dependencies>
          <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.9.1</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>de.jflex</groupId>
        <artifactId>jflex-maven-plugin</artifactId>
        <version>1.9.1</version>
        <executions>
          <execution>
            <goals>
              <goal>generate</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <outputDirectory>gen</outputDirectory>
        </configuration>
      </plugin>

<!--      <plugin>-->
<!--        <groupId>com.github.vbmacher</groupId>-->
<!--        <artifactId>cup-maven-plugin</artifactId>-->
<!--        <version>11b-20160615-2</version>-->
<!--        <executions>-->
<!--          <execution>-->
<!--            <goals>-->
<!--              <goal>generate</goal>-->
<!--            </goals>-->
<!--          </execution>-->
<!--        </executions>-->
<!--        <configuration>-->
<!--          <packageName>io.hostilerobot.protag.lang</packageName>-->
<!--          <className>ProtagParser</className>-->
<!--          <symbolsName>ProtagSymbols</symbolsName>-->
<!--          <cupDefinition>${protag.lang.directory}/${protag.lang.packagefolder}/protag.cup</cupDefinition>-->
<!--          <outputDirectory>gen</outputDirectory>-->
<!--        </configuration>-->
<!--      </plugin>-->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>javacc-maven-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
          <execution>
            <goals>
              <goal>javacc</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <sourceDirectory>src/main/javacc</sourceDirectory>
          <outputDirectory>gen</outputDirectory>
          <includes>
            <include>io/hostilerobot/protag/lang/protag.jj</include>
          </includes>
        </configuration>
      </plugin>

    </plugins>
  </build>
  <distributionManagement>
    <repository>
      <id>github.repo</id>
      <name>Github Repo</name>
      <url>file://${project.basedir}/../maven-repo</url>
    </repository>
  </distributionManagement>
</project>
